    starpu_task_declare_deps_array()
  * Add dependency backward information in debugging mode for gdb's
    starpu-print-task
  * Add sched_data field in starpu_task structure.
  * New starpu_fxt_tool option -label-deps to label dependencies on
    the output graph
  * New environment variable STARPU_GENERATE_TRACE_OPTIONS to specify
    fxt options (to be used with STARPU_GENERATE_TRACE)

Changes:
  * Vastly improve simgrid simulation time.
  * Switch default scheduler to lws.
  * Add "to" parameter to pull_task and can_push methods of components.

Small changes:
  * Use asynchronous transfers for task data fetches with were not prefetched.
  * Allow to call starpu_sched_ctx_set_policy_data on the main
    scheduler context
  * Fonction starpu_is_initialized() is moved to the public API.

StarPU 1.2.4 (git revision 255cf98175ef462749780f30bfed21452b74b594)
==============================================

Small features:
   * Catch of signals SIGINT and SIGSEGV to dump fxt trace files.
   * New configure option --disable-icc to disable the compilation of
     specific ICC examples
   * Add starpu_codelet_pack_arg_init, starpu_codelet_pack_arg,
     starpu_codelet_pack_arg_fini for more fine-grain packing capabilities.
   * Add starpu_task_insert_data_make_room,
     starpu_task_insert_data_process_arg,
     starpu_task_insert_data_process_array_arg,
     starpu_task_insert_data_process_mode_array_arg
   * Do not show internal tasks in fxt dag by default. Allow to hide
     acquisitions too.
   * Add a way to choose the dag.dot colors.

StarPU 1.2.3 (svn revision 22444)
==============================================

New features:
  * Add per-node MPI data.

Small features:
  * When debug is enabled, starpu data accessors first check the
    validity of the data interface type
  * Print disk bus performances when STARPU_BUS_STATS is set
  * Add starpu_vector_filter_list_long filter.
  * Data interfaces now define a name through the struct starpu_data_interface_ops